traces/bug_293.txt
src/bamglib/QuadTree.cpp:266: error: DEAD_STORE
  The value written to &h (type int) is never used.
Showing all 1 steps of the trace


src/bamglib/QuadTree.cpp:266:3: Write of unused value
264.     ii[0]=i0;
265.     jj[0]=j0;
266.     h=hb;
         ^
267.     do {    
268.       b= pb[l];
